--- a/src/assets/toolkit/styles/_mixins.scss
+++ b/src/assets/toolkit/styles/_mixins.scss
@@ -19,7 +19,7 @@
 			display: block;
 			position:fixed;
 			right:0;
-			bottom:0;
+			top: 100%;
 			left:0;
 			z-index:910;
 			height: $bodyLineHeight;
