--- a/src/assets/toolkit/styles/modules/_grid.scss
+++ b/src/assets/toolkit/styles/modules/_grid.scss
@@ -153,7 +153,7 @@
 	{
 		&::before
 		{
-			transform: translateY(0);
+			transform: translateY(-100%);
 			opacity: 1;
 		}
 	}
